@@ -12,4 +12,4 @@ sources.Restart()
 while sources.Lookup('hello'):
 	print sources.Package, sources.Version, sources.Maintainer, sources.Section, `sources.Binaries`
 	print sources.Files
-	print sources.Index.ArchiveURI("")
+	print sources.Index.ArchiveURI(sources.Files[0][2])
