@@ -12,8 +12,10 @@ python-apt (0.6.20) unstable; urgency=low
     - fix missing docstring (closes: #368907), 
       Thanks to Josh Triplett
   * make it build against python2.5
+  * python/progress.cc:
+    - fix memleak (lp: #43096)
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon,  2 Oct 2006 17:29:49 +0200
 
 python-apt (0.6.19) unstable; urgency=low
 
